--- a/index.html
+++ b/index.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Google Maps Javascript API</title>
 	<!-- link style files -->
-	<link rel="stylesheet" href="./css/main.css">
+	<link rel="stylesheet" href="./src/css/main.css">
 
 	<!-- import google maps SDK-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=YOUR-API-KEY" defer></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcaeJBqYrmnjvD6GxTMLKwqVLbnOEC1E0" defer></script>
 	<!-- import javascript file-->
-	<script src="./js/app.js" type="module" defer></script>
+	<script src="./src/js/app.js" type="module" defer></script>
 </head>
+
 <body>
-	
+
 	<!-- google maps container element -->
 	<div class="maps-container"></div>
 
@@ -26,10 +28,13 @@
 
 	<!-- ==================== Maps Buttons ====================================== -->
 	<!-- locate current location button -->
-	<button class="maps-btn" id="locate-me-btn" style="--left:1rem;" title="Get your current location"><span>&#10018;</span></button>
+	<button class="maps-btn" id="locate-me-btn" style="--left:1rem;"
+		title="Get your current location"><span>&#10018;</span></button>
 	<!-- street view -->
 	<button class="maps-btn" id="street-view-btn" style="--left:4rem;" title="Street view"><span>&#10147;</span></button>
 	<!-- calculate distance button  -->
-	<button class="maps-btn" id="distance-btn" style="--left:7rem;" title="Calculate distance"><span>&Dstrok;</span></button>
+	<button class="maps-btn" id="distance-btn" style="--left:7rem;"
+		title="Calculate distance"><span>&Dstrok;</span></button>
 </body>
+
 </html>
