--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="./src/css/main.css">
 
 	<!-- import google maps SDK-->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDcaeJBqYrmnjvD6GxTMLKwqVLbnOEC1E0" defer></script>
+	<script src="https://maps.googleapis.com/maps/api/js?key={your-key}" defer></script>
 	<!-- import javascript file-->
 	<script src="./src/js/app.js" type="module" defer></script>
 </head>
